# weather-display

./: .gitmodules  README.md
case/: README.md
case/cad/: Boden.step  Deckel.step
case/cardboard/: README.md
display/: .gitignore  .gitmodules  CMakeLists.txt  notes.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6
display/components/: README.md
display/components/GxEPD2/: CMakeLists.txt
display/components/GxEPD2/src/: GxEPD2_426_GDEQ0426T82.cpp  GxEPD2_426_GDEQ0426T82.h  GxEPD2_426_GDEQ0426T82Mod.cpp  GxEPD2_426_GDEQ0426T82Mod.h
display/components/arduino/: CMakeLists.txt
display/main/: CMakeLists.txt  board.h  idf_component.yml  main.cpp  main.h  nvs_data.csv
display/main/Fonts/: NotoSansBold80pt7b.h
server/: .dockerignore  Dockerfile  docker-compose.yml  env.example  package.json
server/src/: dashboardTemplate.ts  server.ts
