# GxEPD2 Library
# https://github.com/ZinggJM/GxEPD2
# BSD License

cmake_minimum_required(VERSION 3.10)

idf_component_register(SRCS 
    # only compile relevant files as these take a long time to compile
    "code/src/GxEPD2_EPD.cpp"
    # "code/src/it8951/GxEPD2_it103_1872x1404.cpp"
    # "code/src/it8951/GxEPD2_it60.cpp"
    # "code/src/it8951/GxEPD2_it78_1872x1404.cpp"
    # "code/src/it8951/GxEPD2_it60_1448x1072.cpp"
    # "code/src/gdem3c/GxEPD2_1330c_GDEM133Z91.cpp"
    # "code/src/gdey/GxEPD2_270_GDEY027T91.cpp"
    # "code/src/gdey/GxEPD2_154_GDEY0154D67.cpp"
    # "code/src/gdey/GxEPD2_213_GDEY0213B74.cpp"
    # "code/src/gdey/GxEPD2_370_GDEY037T03.cpp"
    # "code/src/gdey/GxEPD2_266_GDEY0266T90.cpp"
    # "code/src/gdey/GxEPD2_420_GDEY042T81.cpp"
    # "code/src/gdey/GxEPD2_290_GDEY029T71H.cpp"
    # "code/src/gdey/GxEPD2_290_GDEY029T94.cpp"
    # "code/src/gdey/GxEPD2_579_GDEY0579T93.cpp"
    # "code/src/gdey/GxEPD2_750_GDEY075T7.cpp"
    # "code/src/epd3c/GxEPD2_154_Z90c.cpp"
    # "code/src/epd3c/GxEPD2_290c.cpp"
    # "code/src/epd3c/GxEPD2_270c.cpp"
    # "code/src/epd3c/GxEPD2_290_Z13c.cpp"
    # "code/src/epd3c/GxEPD2_420c_Z21.cpp"
    # "code/src/epd3c/GxEPD2_154c.cpp"
    # "code/src/epd3c/GxEPD2_583c.cpp"
    # "code/src/epd3c/GxEPD2_750c_Z08.cpp"
    # "code/src/epd3c/GxEPD2_750c_Z90.cpp"
    # "code/src/epd3c/GxEPD2_213_Z19c.cpp"
    # "code/src/epd3c/GxEPD2_266c.cpp"
    # "code/src/epd3c/GxEPD2_1248c.cpp"
    # "code/src/epd3c/GxEPD2_213c.cpp"
    # "code/src/epd3c/GxEPD2_583c_Z83.cpp"
    # "code/src/epd3c/GxEPD2_213_Z98c.cpp"
    # "code/src/epd3c/GxEPD2_290_C90c.cpp"
    # "code/src/epd3c/GxEPD2_420c.cpp"
    # "code/src/epd3c/GxEPD2_750c.cpp"
    # "code/src/epd4c/GxEPD2_300c.cpp"
    # "code/src/epd4c/GxEPD2_437c.cpp"
    # "code/src/epd4c/GxEPD2_0579c_GDEY0579F51.cpp"
    # "code/src/epd4c/GxEPD2_290c_GDEY029F51H.cpp"
    # "code/src/epd4c/GxEPD2_213c_GDEY0213F51.cpp"
    # "code/src/epd4c/GxEPD2_1160c_GDEY116F51.cpp"
    # "code/src/epd4c/GxEPD2_420c_GDEY0420F51.cpp"
    # "code/src/epd4c/GxEPD2_266c_GDEY0266F51H.cpp"
    # "code/src/epd/GxEPD2_102.cpp"
    # "code/src/epd/GxEPD2_213_flex.cpp"
    # "code/src/epd/GxEPD2_1160_T91.cpp"
    # "code/src/epd/GxEPD2_290_T94.cpp"
    # "code/src/epd/GxEPD2_154_T8.cpp"
    # "code/src/epd/GxEPD2_260.cpp"
    # "code/src/epd/GxEPD2_154_D67.cpp"
    # "code/src/epd/GxEPD2_583.cpp"
    # "code/src/epd/GxEPD2_420.cpp"
    # "code/src/epd/GxEPD2_154_M09.cpp"
    # "code/src/epd/GxEPD2_370_TC1.cpp"
    # "code/src/epd/GxEPD2_213_B72.cpp"
    # "code/src/epd/GxEPD2_290_T94_V2.cpp"
    # "code/src/epd/GxEPD2_290_M06.cpp"
    # "code/src/epd/GxEPD2_750.cpp"
    # "code/src/epd/GxEPD2_154_M10.cpp"
    # "code/src/epd/GxEPD2_583_T8.cpp"
    # "code/src/epd/GxEPD2_290.cpp"
    # "code/src/epd/GxEPD2_266_BN.cpp"
    # "code/src/epd/GxEPD2_371.cpp"
    # "code/src/epd/GxEPD2_213_BN.cpp"
    # "code/src/epd/GxEPD2_213.cpp"
    # "code/src/epd/GxEPD2_270.cpp"
    # "code/src/epd/GxEPD2_290_T5.cpp"
    # "code/src/epd/GxEPD2_213_T5D.cpp"
    # "code/src/epd/GxEPD2_260_M01.cpp"
    # "code/src/epd/GxEPD2_750_T7.cpp"
    # "code/src/epd/GxEPD2_150_BN.cpp"
    # "code/src/epd/GxEPD2_290_I6FD.cpp"
    # "code/src/epd/GxEPD2_290_T5D.cpp"
    # "code/src/epd/GxEPD2_213_B74.cpp"
    # "code/src/epd/GxEPD2_1248.cpp"
    # "code/src/epd/GxEPD2_213_M21.cpp"
    # "code/src/epd/GxEPD2_154.cpp"
    # "code/src/epd/GxEPD2_290_BS.cpp"
    # "code/src/epd/GxEPD2_213_B73.cpp"
    # "code/src/epd/GxEPD2_420_M01.cpp"
    # "code/src/gdem/GxEPD2_1085_GDEM1085T51.cpp"
    # "code/src/gdem/GxEPD2_1330_GDEM133T91.cpp"
    # "code/src/gdem/GxEPD2_1020_GDEM102T91.cpp"
    # "code/src/GxEPD2_EPD.cpp"
    # "code/src/gdeq3c/GxEPD2_583c_GDEQ0583Z31.cpp"
    # "code/src/gdey3c/GxEPD2_420c_GDEY042Z98.cpp"
    # "code/src/gdey3c/GxEPD2_579c_GDEY0579Z93.cpp"
    # "code/src/gdey3c/GxEPD2_1160c_GDEY116Z91.cpp"
    # "code/src/other/GxEPD2_420_GYE042A87.cpp"
    # "code/src/other/GxEPD2_420_SE0420NQ04.cpp"
    # "code/src/gdeq/GxEPD2_583_GDEQ0583T31.cpp"
    # "code/src/gdeq/GxEPD2_310_GDEQ031T10.cpp"
    # "code/src/gdeq/GxEPD2_426_GDEQ0426T82.cpp"
    # "code/src/epd7c/GxEPD2_730c_ACeP_730.cpp"
    # "code/src/epd7c/GxEPD2_730c_GDEP073E01.cpp"
    # "code/src/epd7c/GxEPD2_565c_GDEP0565D90.cpp"
    # "code/src/epd7c/GxEPD2_730c_GDEY073D46.cpp"
    # "code/src/epd7c/GxEPD2_565c.cpp"

    # add customized display driver with lots of cleanups compared to the original
    "src/GxEPD2_426_GDEQ0426T82Mod.cpp"
                       INCLUDE_DIRS "code/src" "src"
                       REQUIRES arduino-esp32 Adafruit_GFX_Library)

project(GxEPD2) 
